parser/Parser.output
Grammar

    0 $accept: sql $end

    1 sql: command ';'
    2    | sql command ';'

    3 command: CREATE DATABASE NAME
    4        | DROP DATABASE NAME
    5        | USE NAME
    6        | SHOW DATABASE NAME
    7        | SHOW DATABASES
    8        | DESC DATABASE NAME
    9        | CREATE TABLE NAME '(' attributelist ')'
   10        | DROP TABLE NAME
   11        | SHOW TABLE NAME
   12        | DESC TABLE NAME
   13        | SHOW TABLES
   14        | CREATE INDEX NAME ON NAME '(' NAME ')'
   15        | DROP INDEX NAME
   16        | ALTER TABLE NAME ADD attribute
   17        | ALTER TABLE NAME DROP PRIMARY KEY
   18        | ALTER TABLE NAME DROP PRIMARY KEY NAME
   19        | ALTER TABLE NAME DROP FOREIGN KEY NAME
   20        | ALTER TABLE NAME DROP NAME
   21        | ALTER TABLE NAME RENAME TO NAME
   22        | INSERT INTO NAME VALUES valuelists
   23        | DELETEC FROM NAME whereClauses
   24        | UPDATE NAME SET setClauselist whereClauses
   25        | SELECT columnlist FROM tablelist whereClauses
   26        | SELECT '*' FROM tablelist whereClauses

   27 whereClauses: WHERE conditions
   28             | /* empty */

   29 conditions: comparison
   30           | conditions AND comparison

   31 comparison: column op expr
   32           | column IS NULLC
   33           | column IS NOT NULLC

   34 tablelist: NAME
   35          | tablelist ',' NAME

   36 columnlist: column
   37           | columnlist ',' column

   38 column: NAME '.' NAME
   39       | NAME

   40 expr: value
   41     | column
   42     | expr '+' expr
   43     | expr '-' expr
   44     | expr '*' expr
   45     | expr '/' expr
   46     | expr '%' expr

   47 op: EQ
   48   | GT
   49   | LT
   50   | GE
   51   | LE
   52   | NE

   53 setClauselist: setClause
   54              | setClauselist ',' setClause

   55 setClause: column EQ expr

   56 attributelist: attribute
   57              | attributelist ',' attribute

   58 attribute: NAME type
   59          | NAME type NOT NULLC
   60          | NAME type DEFAULT value
   61          | NAME type NOT NULLC DEFAULT value
   62          | PRIMARY KEY '(' NAME ')'
   63          | FOREIGN KEY '(' NAME ')' REFERENCES NAME '(' NAME ')'

   64 type: INTEGER '(' INUM ')'
   65     | SMALLINT
   66     | CHARTYPE '(' INUM ')'
   67     | DOUBLETYPE
   68     | FLOATTYPE
   69     | DATETYPE
   70     | NUMERICTYPE '(' INUM ',' INUM ')'

   71 valuelists: '(' valuelist ')'
   72           | valuelists ',' '(' valuelist ')'

   73 valuelist: value
   74          | valuelist ',' value

   75 value: TEXT
   76      | INUM
   77      | '-' INUM
   78      | FNUM
   79      | DATENUM
   80      | NULLC


Terminals, with rules where they appear

$end (0) 0
'%' (37) 46
'(' (40) 9 14 62 63 64 66 70 71 72
')' (41) 9 14 62 63 64 66 70 71 72
'*' (42) 26 44
'+' (43) 42
',' (44) 35 37 54 57 70 72 74
'-' (45) 43 77
'.' (46) 38
'/' (47) 45
';' (59) 1 2
error (256)
CREATE (258) 3 9 14
DROP (259) 4 10 15 17 18 19 20
USE (260) 5
SHOW (261) 6 7 11 13
DESC (262) 8 12
ADD (263) 16
DATABASE (264) 3 4 6 8
DATABASES (265) 7
TABLE (266) 9 10 11 12 16 17 18 19 20 21
TABLES (267) 13
INDEX (268) 14 15
ALTER (269) 16 17 18 19 20 21
INSERT (270) 22
INTO (271) 22
VALUES (272) 22
DELETEC (273) 23
FROM (274) 23 25 26
UPDATE (275) 24
SELECT (276) 25 26
WHERE (277) 27
IS (278) 32 33
NOT (279) 33 59 61
NULLC (280) 32 33 59 61 80
DEFAULT (281) 60 61
PRIMARY (282) 17 18 62
FOREIGN (283) 19 63
KEY (284) 17 18 19 62 63
REFERENCES (285) 63
RENAME (286) 21
TO (287) 21
ON (288) 14
AND (289) 30
SET (290) 24
INTEGER (291) 64
SMALLINT (292) 65
CHARTYPE (293) 66
DOUBLETYPE (294) 67
FLOATTYPE (295) 68
DATETYPE (296) 69
NUMERICTYPE (297) 70
EQ (298) 47 55
GT (299) 48
LT (300) 49
GE (301) 50
LE (302) 51
NE (303) 52
NAME (304) 3 4 5 6 8 9 10 11 12 14 15 16 17 18 19 20 21 22 23 24 34
    35 38 39 58 59 60 61 62 63
TEXT (305) 75
INUM (306) 64 66 70 76 77
FNUM (307) 78
DATENUM (308) 79


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
sql (65)
    on left: 1 2, on right: 0 2
command (66)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26, on right: 1 2
whereClauses (67)
    on left: 27 28, on right: 23 24 25 26
conditions (68)
    on left: 29 30, on right: 27 30
comparison (69)
    on left: 31 32 33, on right: 29 30
tablelist (70)
    on left: 34 35, on right: 25 26 35
columnlist (71)
    on left: 36 37, on right: 25 37
column (72)
    on left: 38 39, on right: 31 32 33 36 37 41 55
expr (73)
    on left: 40 41 42 43 44 45 46, on right: 31 42 43 44 45 46 55
op (74)
    on left: 47 48 49 50 51 52, on right: 31
setClauselist (75)
    on left: 53 54, on right: 24 54
setClause (76)
    on left: 55, on right: 53 54
attributelist (77)
    on left: 56 57, on right: 9 57
attribute (78)
    on left: 58 59 60 61 62 63, on right: 16 56 57
type (79)
    on left: 64 65 66 67 68 69 70, on right: 58 59 60 61
valuelists (80)
    on left: 71 72, on right: 22 72
valuelist (81)
    on left: 73 74, on right: 71 72 74
value (82)
    on left: 75 76 77 78 79 80, on right: 40 60 61 73 74


state 0

    0 $accept: . sql $end

    CREATE   shift, and go to state 1
    DROP     shift, and go to state 2
    USE      shift, and go to state 3
    SHOW     shift, and go to state 4
    DESC     shift, and go to state 5
    ALTER    shift, and go to state 6
    INSERT   shift, and go to state 7
    DELETEC  shift, and go to state 8
    UPDATE   shift, and go to state 9
    SELECT   shift, and go to state 10

    sql      go to state 11
    command  go to state 12


state 1

    3 command: CREATE . DATABASE NAME
    9        | CREATE . TABLE NAME '(' attributelist ')'
   14        | CREATE . INDEX NAME ON NAME '(' NAME ')'

    DATABASE  shift, and go to state 13
    TABLE     shift, and go to state 14
    INDEX     shift, and go to state 15


state 2

    4 command: DROP . DATABASE NAME
   10        | DROP . TABLE NAME
   15        | DROP . INDEX NAME

    DATABASE  shift, and go to state 16
    TABLE     shift, and go to state 17
    INDEX     shift, and go to state 18


state 3

    5 command: USE . NAME

    NAME  shift, and go to state 19


state 4

    6 command: SHOW . DATABASE NAME
    7        | SHOW . DATABASES
   11        | SHOW . TABLE NAME
   13        | SHOW . TABLES

    DATABASE   shift, and go to state 20
    DATABASES  shift, and go to state 21
    TABLE      shift, and go to state 22
    TABLES     shift, and go to state 23


state 5

    8 command: DESC . DATABASE NAME
   12        | DESC . TABLE NAME

    DATABASE  shift, and go to state 24
    TABLE     shift, and go to state 25


state 6

   16 command: ALTER . TABLE NAME ADD attribute
   17        | ALTER . TABLE NAME DROP PRIMARY KEY
   18        | ALTER . TABLE NAME DROP PRIMARY KEY NAME
   19        | ALTER . TABLE NAME DROP FOREIGN KEY NAME
   20        | ALTER . TABLE NAME DROP NAME
   21        | ALTER . TABLE NAME RENAME TO NAME

    TABLE  shift, and go to state 26


state 7

   22 command: INSERT . INTO NAME VALUES valuelists

    INTO  shift, and go to state 27


state 8

   23 command: DELETEC . FROM NAME whereClauses

    FROM  shift, and go to state 28


state 9

   24 command: UPDATE . NAME SET setClauselist whereClauses

    NAME  shift, and go to state 29


state 10

   25 command: SELECT . columnlist FROM tablelist whereClauses
   26        | SELECT . '*' FROM tablelist whereClauses

    '*'   shift, and go to state 30
    NAME  shift, and go to state 31

    columnlist  go to state 32
    column      go to state 33


state 11

    0 $accept: sql . $end
    2 sql: sql . command ';'

    $end     shift, and go to state 34
    CREATE   shift, and go to state 1
    DROP     shift, and go to state 2
    USE      shift, and go to state 3
    SHOW     shift, and go to state 4
    DESC     shift, and go to state 5
    ALTER    shift, and go to state 6
    INSERT   shift, and go to state 7
    DELETEC  shift, and go to state 8
    UPDATE   shift, and go to state 9
    SELECT   shift, and go to state 10

    command  go to state 35


state 12

    1 sql: command . ';'

    ';'  shift, and go to state 36


state 13

    3 command: CREATE DATABASE . NAME

    NAME  shift, and go to state 37


state 14

    9 command: CREATE TABLE . NAME '(' attributelist ')'

    NAME  shift, and go to state 38


state 15

   14 command: CREATE INDEX . NAME ON NAME '(' NAME ')'

    NAME  shift, and go to state 39


state 16

    4 command: DROP DATABASE . NAME

    NAME  shift, and go to state 40


state 17

   10 command: DROP TABLE . NAME

    NAME  shift, and go to state 41


state 18

   15 command: DROP INDEX . NAME

    NAME  shift, and go to state 42


state 19

    5 command: USE NAME .

    $default  reduce using rule 5 (command)


state 20

    6 command: SHOW DATABASE . NAME

    NAME  shift, and go to state 43


state 21

    7 command: SHOW DATABASES .

    $default  reduce using rule 7 (command)


state 22

   11 command: SHOW TABLE . NAME

    NAME  shift, and go to state 44


state 23

   13 command: SHOW TABLES .

    $default  reduce using rule 13 (command)


state 24

    8 command: DESC DATABASE . NAME

    NAME  shift, and go to state 45


state 25

   12 command: DESC TABLE . NAME

    NAME  shift, and go to state 46


state 26

   16 command: ALTER TABLE . NAME ADD attribute
   17        | ALTER TABLE . NAME DROP PRIMARY KEY
   18        | ALTER TABLE . NAME DROP PRIMARY KEY NAME
   19        | ALTER TABLE . NAME DROP FOREIGN KEY NAME
   20        | ALTER TABLE . NAME DROP NAME
   21        | ALTER TABLE . NAME RENAME TO NAME

    NAME  shift, and go to state 47


state 27

   22 command: INSERT INTO . NAME VALUES valuelists

    NAME  shift, and go to state 48


state 28

   23 command: DELETEC FROM . NAME whereClauses

    NAME  shift, and go to state 49


state 29

   24 command: UPDATE NAME . SET setClauselist whereClauses

    SET  shift, and go to state 50


state 30

   26 command: SELECT '*' . FROM tablelist whereClauses

    FROM  shift, and go to state 51


state 31

   38 column: NAME . '.' NAME
   39       | NAME .

    '.'  shift, and go to state 52

    $default  reduce using rule 39 (column)


state 32

   25 command: SELECT columnlist . FROM tablelist whereClauses
   37 columnlist: columnlist . ',' column

    FROM  shift, and go to state 53
    ','   shift, and go to state 54


state 33

   36 columnlist: column .

    $default  reduce using rule 36 (columnlist)


state 34

    0 $accept: sql $end .

    $default  accept


state 35

    2 sql: sql command . ';'

    ';'  shift, and go to state 55


state 36

    1 sql: command ';' .

    $default  reduce using rule 1 (sql)


state 37

    3 command: CREATE DATABASE NAME .

    $default  reduce using rule 3 (command)


state 38

    9 command: CREATE TABLE NAME . '(' attributelist ')'

    '('  shift, and go to state 56


state 39

   14 command: CREATE INDEX NAME . ON NAME '(' NAME ')'

    ON  shift, and go to state 57


state 40

    4 command: DROP DATABASE NAME .

    $default  reduce using rule 4 (command)


state 41

   10 command: DROP TABLE NAME .

    $default  reduce using rule 10 (command)


state 42

   15 command: DROP INDEX NAME .

    $default  reduce using rule 15 (command)


state 43

    6 command: SHOW DATABASE NAME .

    $default  reduce using rule 6 (command)


state 44

   11 command: SHOW TABLE NAME .

    $default  reduce using rule 11 (command)


state 45

    8 command: DESC DATABASE NAME .

    $default  reduce using rule 8 (command)


state 46

   12 command: DESC TABLE NAME .

    $default  reduce using rule 12 (command)


state 47

   16 command: ALTER TABLE NAME . ADD attribute
   17        | ALTER TABLE NAME . DROP PRIMARY KEY
   18        | ALTER TABLE NAME . DROP PRIMARY KEY NAME
   19        | ALTER TABLE NAME . DROP FOREIGN KEY NAME
   20        | ALTER TABLE NAME . DROP NAME
   21        | ALTER TABLE NAME . RENAME TO NAME

    DROP    shift, and go to state 58
    ADD     shift, and go to state 59
    RENAME  shift, and go to state 60


state 48

   22 command: INSERT INTO NAME . VALUES valuelists

    VALUES  shift, and go to state 61


state 49

   23 command: DELETEC FROM NAME . whereClauses

    WHERE  shift, and go to state 62

    $default  reduce using rule 28 (whereClauses)

    whereClauses  go to state 63


state 50

   24 command: UPDATE NAME SET . setClauselist whereClauses

    NAME  shift, and go to state 31

    column         go to state 64
    setClauselist  go to state 65
    setClause      go to state 66


state 51

   26 command: SELECT '*' FROM . tablelist whereClauses

    NAME  shift, and go to state 67

    tablelist  go to state 68


state 52

   38 column: NAME '.' . NAME

    NAME  shift, and go to state 69


state 53

   25 command: SELECT columnlist FROM . tablelist whereClauses

    NAME  shift, and go to state 67

    tablelist  go to state 70


state 54

   37 columnlist: columnlist ',' . column

    NAME  shift, and go to state 31

    column  go to state 71


state 55

    2 sql: sql command ';' .

    $default  reduce using rule 2 (sql)


state 56

    9 command: CREATE TABLE NAME '(' . attributelist ')'

    PRIMARY  shift, and go to state 72
    FOREIGN  shift, and go to state 73
    NAME     shift, and go to state 74

    attributelist  go to state 75
    attribute      go to state 76


state 57

   14 command: CREATE INDEX NAME ON . NAME '(' NAME ')'

    NAME  shift, and go to state 77


state 58

   17 command: ALTER TABLE NAME DROP . PRIMARY KEY
   18        | ALTER TABLE NAME DROP . PRIMARY KEY NAME
   19        | ALTER TABLE NAME DROP . FOREIGN KEY NAME
   20        | ALTER TABLE NAME DROP . NAME

    PRIMARY  shift, and go to state 78
    FOREIGN  shift, and go to state 79
    NAME     shift, and go to state 80


state 59

   16 command: ALTER TABLE NAME ADD . attribute

    PRIMARY  shift, and go to state 72
    FOREIGN  shift, and go to state 73
    NAME     shift, and go to state 74

    attribute  go to state 81


state 60

   21 command: ALTER TABLE NAME RENAME . TO NAME

    TO  shift, and go to state 82


state 61

   22 command: INSERT INTO NAME VALUES . valuelists

    '('  shift, and go to state 83

    valuelists  go to state 84


state 62

   27 whereClauses: WHERE . conditions

    NAME  shift, and go to state 31

    conditions  go to state 85
    comparison  go to state 86
    column      go to state 87


state 63

   23 command: DELETEC FROM NAME whereClauses .

    $default  reduce using rule 23 (command)


state 64

   55 setClause: column . EQ expr

    EQ  shift, and go to state 88


state 65

   24 command: UPDATE NAME SET setClauselist . whereClauses
   54 setClauselist: setClauselist . ',' setClause

    WHERE  shift, and go to state 62
    ','    shift, and go to state 89

    $default  reduce using rule 28 (whereClauses)

    whereClauses  go to state 90


state 66

   53 setClauselist: setClause .

    $default  reduce using rule 53 (setClauselist)


state 67

   34 tablelist: NAME .

    $default  reduce using rule 34 (tablelist)


state 68

   26 command: SELECT '*' FROM tablelist . whereClauses
   35 tablelist: tablelist . ',' NAME

    WHERE  shift, and go to state 62
    ','    shift, and go to state 91

    $default  reduce using rule 28 (whereClauses)

    whereClauses  go to state 92


state 69

   38 column: NAME '.' NAME .

    $default  reduce using rule 38 (column)


state 70

   25 command: SELECT columnlist FROM tablelist . whereClauses
   35 tablelist: tablelist . ',' NAME

    WHERE  shift, and go to state 62
    ','    shift, and go to state 91

    $default  reduce using rule 28 (whereClauses)

    whereClauses  go to state 93


state 71

   37 columnlist: columnlist ',' column .

    $default  reduce using rule 37 (columnlist)


state 72

   62 attribute: PRIMARY . KEY '(' NAME ')'

    KEY  shift, and go to state 94


state 73

   63 attribute: FOREIGN . KEY '(' NAME ')' REFERENCES NAME '(' NAME ')'

    KEY  shift, and go to state 95


state 74

   58 attribute: NAME . type
   59          | NAME . type NOT NULLC
   60          | NAME . type DEFAULT value
   61          | NAME . type NOT NULLC DEFAULT value

    INTEGER      shift, and go to state 96
    SMALLINT     shift, and go to state 97
    CHARTYPE     shift, and go to state 98
    DOUBLETYPE   shift, and go to state 99
    FLOATTYPE    shift, and go to state 100
    DATETYPE     shift, and go to state 101
    NUMERICTYPE  shift, and go to state 102

    type  go to state 103


state 75

    9 command: CREATE TABLE NAME '(' attributelist . ')'
   57 attributelist: attributelist . ',' attribute

    ')'  shift, and go to state 104
    ','  shift, and go to state 105


state 76

   56 attributelist: attribute .

    $default  reduce using rule 56 (attributelist)


state 77

   14 command: CREATE INDEX NAME ON NAME . '(' NAME ')'

    '('  shift, and go to state 106


state 78

   17 command: ALTER TABLE NAME DROP PRIMARY . KEY
   18        | ALTER TABLE NAME DROP PRIMARY . KEY NAME

    KEY  shift, and go to state 107


state 79

   19 command: ALTER TABLE NAME DROP FOREIGN . KEY NAME

    KEY  shift, and go to state 108


state 80

   20 command: ALTER TABLE NAME DROP NAME .

    $default  reduce using rule 20 (command)


state 81

   16 command: ALTER TABLE NAME ADD attribute .

    $default  reduce using rule 16 (command)


state 82

   21 command: ALTER TABLE NAME RENAME TO . NAME

    NAME  shift, and go to state 109


state 83

   71 valuelists: '(' . valuelist ')'

    NULLC    shift, and go to state 110
    '-'      shift, and go to state 111
    TEXT     shift, and go to state 112
    INUM     shift, and go to state 113
    FNUM     shift, and go to state 114
    DATENUM  shift, and go to state 115

    valuelist  go to state 116
    value      go to state 117


state 84

   22 command: INSERT INTO NAME VALUES valuelists .
   72 valuelists: valuelists . ',' '(' valuelist ')'

    ','  shift, and go to state 118

    $default  reduce using rule 22 (command)


state 85

   27 whereClauses: WHERE conditions .
   30 conditions: conditions . AND comparison

    AND  shift, and go to state 119

    $default  reduce using rule 27 (whereClauses)


state 86

   29 conditions: comparison .

    $default  reduce using rule 29 (conditions)


state 87

   31 comparison: column . op expr
   32           | column . IS NULLC
   33           | column . IS NOT NULLC

    IS  shift, and go to state 120
    EQ  shift, and go to state 121
    GT  shift, and go to state 122
    LT  shift, and go to state 123
    GE  shift, and go to state 124
    LE  shift, and go to state 125
    NE  shift, and go to state 126

    op  go to state 127


state 88

   55 setClause: column EQ . expr

    NULLC    shift, and go to state 110
    '-'      shift, and go to state 111
    NAME     shift, and go to state 31
    TEXT     shift, and go to state 112
    INUM     shift, and go to state 113
    FNUM     shift, and go to state 114
    DATENUM  shift, and go to state 115

    column  go to state 128
    expr    go to state 129
    value   go to state 130


state 89

   54 setClauselist: setClauselist ',' . setClause

    NAME  shift, and go to state 31

    column     go to state 64
    setClause  go to state 131


state 90

   24 command: UPDATE NAME SET setClauselist whereClauses .

    $default  reduce using rule 24 (command)


state 91

   35 tablelist: tablelist ',' . NAME

    NAME  shift, and go to state 132


state 92

   26 command: SELECT '*' FROM tablelist whereClauses .

    $default  reduce using rule 26 (command)


state 93

   25 command: SELECT columnlist FROM tablelist whereClauses .

    $default  reduce using rule 25 (command)


state 94

   62 attribute: PRIMARY KEY . '(' NAME ')'

    '('  shift, and go to state 133


state 95

   63 attribute: FOREIGN KEY . '(' NAME ')' REFERENCES NAME '(' NAME ')'

    '('  shift, and go to state 134


state 96

   64 type: INTEGER . '(' INUM ')'

    '('  shift, and go to state 135


state 97

   65 type: SMALLINT .

    $default  reduce using rule 65 (type)


state 98

   66 type: CHARTYPE . '(' INUM ')'

    '('  shift, and go to state 136


state 99

   67 type: DOUBLETYPE .

    $default  reduce using rule 67 (type)


state 100

   68 type: FLOATTYPE .

    $default  reduce using rule 68 (type)


state 101

   69 type: DATETYPE .

    $default  reduce using rule 69 (type)


state 102

   70 type: NUMERICTYPE . '(' INUM ',' INUM ')'

    '('  shift, and go to state 137


state 103

   58 attribute: NAME type .
   59          | NAME type . NOT NULLC
   60          | NAME type . DEFAULT value
   61          | NAME type . NOT NULLC DEFAULT value

    NOT      shift, and go to state 138
    DEFAULT  shift, and go to state 139

    $default  reduce using rule 58 (attribute)


state 104
